welplan/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welplan
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: welplan
  template:
    metadata:
      labels:
        app: welplan
    spec:
      containers:
        - name: welplan
          image: ghcr.io/pmh-only/welplan2:latest
