welplan/service.yml
apiVersion: v1
kind: Service
metadata:
  name: welplan-service
spec:
  selector:
    app: welplan
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
